--- a/package.xml
+++ b/package.xml
@@ -4,5 +4,9 @@
         <members>Case.Critical__c</members>
         <name>CustomField</name>
     </types>
+    <types>
+        <members>Admin</members>
+        <name>Profile</name>
+    </types>
     <version>46.0</version>
 </Package>
