--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>Case.Workload__c</members>
-        <name>CustomField</name>
+        <members>Test2_Folder</members>
+        <members>Test2_Folder/Test2_Report</members>
+        <name>Report</name>
     </types>
     <version>46.0</version>
 </Package>
