--- a/package.xml
+++ b/package.xml
@@ -1,12 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>AppleWatch</members>
-        <name>ApexClass</name>
-    </types>
-    <types>
-        <members>AppleWatch</members>
-        <name>ApexTrigger</name>
+        <members>Account.Account_Test_Record_Type</members>
+        <name>RecordType</name>
     </types>
     <version>46.0</version>
 </Package>
