--- a/package.xml
+++ b/package.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>Account.Test__c</members>
-        <name>CustomField</name>
-    </types>
-    <types>
-        <members>Account.Account_Test_Record_Type</members>
-        <name>RecordType</name>
+        <members>echosign_dev1__Adobe_Sign_Salesforce</members>
+        <members>echosign_dev1__EchoSign</members>
+        <name>CustomApplication</name>
     </types>
     <version>46.0</version>
 </Package>
