--- a/package.xml
+++ b/package.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>Account.Test__c</members>
+        <members>Account.Numbers__c</members>
         <name>CustomField</name>
     </types>
     <types>
-        <members>Account.Account_Test_Record_Type</members>
+        <members>Account.Testing_Record_Type</members>
         <name>RecordType</name>
     </types>
     <version>46.0</version>
