--- a/package.xml
+++ b/package.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>Account.Test__c</members>
+        <members>Asset.Audit_Assets__c</members>
         <name>CustomField</name>
     </types>
     <types>
-        <members>Account.Account_Test_Record_Type</members>
+        <members>Asset</members>
+        <name>CustomObject</name>
+    </types>
+    <types>
+        <members>Asset.Audit_Assets_RT</members>
         <name>RecordType</name>
     </types>
     <version>46.0</version>
