--- a/package.xml
+++ b/package.xml
@@ -1,15 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>Technology__c.Amount__c</members>
-        <members>Technology__c.Brand__c</members>
-        <members>Technology__c.Hours_On_Tech__c</members>
-        <members>Technology__c.Phones__c</members>
-        <members>Technology__c.Time_Spent__c</members>
-        <name>CustomField</name>
-    </types>
-    <types>
-        <members>Technology__c</members>
+        <members>Wardrobe__c</members>
         <name>CustomObject</name>
     </types>
     <version>46.0</version>
