--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>Asset.Document_Size__c</members>
-        <name>CustomField</name>
+        <members>Account-Account %28Marketing%29 Layout</members>
+        <name>Layout</name>
+    </types>
+    <types>
+        <members>ContractManager</members>
+        <name>Profile</name>
     </types>
     <version>47.0</version>
 </Package>
