--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>Asset.Document_Size__c</members>
-        <name>CustomField</name>
+        <members>Silverware__c</members>
+        <name>CustomObject</name>
     </types>
     <version>47.0</version>
 </Package>
