--- a/package.xml
+++ b/package.xml
@@ -4,5 +4,13 @@
         <members>New_Contact</members>
         <name>Flow</name>
     </types>
+    <types>
+        <members>New_Contact</members>
+        <name>FlowDefinition</name>
+    </types>
+    <types>
+        <members>es</members>
+        <name>Translations</name>
+    </types>
     <version>47.0</version>
 </Package>
