--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>New_Contact</members>
-        <name>Flow</name>
+        <members>sampleGetAccountDetails</members>
+        <name>DataRaptor</name>
     </types>
     <version>47.0</version>
 </Package>
