--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>Animal__c</members>
+        <members>Phone_Case__c.Case_Color__c</members>
+        <name>CustomField</name>
+    </types>
+    <types>
+        <members>Phone_Case__c</members>
         <name>CustomObject</name>
     </types>
-    <version>47.0</version>
+    <types>
+        <members>es</members>
+        <name>Translations</name>
+    </types>
+    <version>48.0</version>
 </Package>
