--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>Phone_Case__c-en_US</members>
-        <name>CustomObjectTranslation</name>
+        <members>CustomLabels</members>
+        <name>CustomLabels</name>
     </types>
     <version>48.0</version>
 </Package>
