--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>Testing</members>
-        <name>PermissionSet</name>
+        <members>Opportunity.AccountId</members>
+        <name>CustomField</name>
+    </types>
+    <types>
+        <members>Custom%3A Sales Profile</members>
+        <name>Profile</name>
     </types>
     <version>48.0</version>
 </Package>
