--- a/package.xml
+++ b/package.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>Test_Group</members>
-        <name>Group</name>
+        <members>Account.Test_Layout</members>
+        <name>CompactLayout</name>
+    </types>
+    <types>
+        <members>Account</members>
+        <name>CustomObject</name>
     </types>
     <types>
         <members>Account.Account_Test_Record_Type</members>
-        <members>Account.Test_Record_Type</members>
         <name>RecordType</name>
     </types>
     <version>48.0</version>
