--- a/package.xml
+++ b/package.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>Test_Group</members>
-        <name>Group</name>
+        <members>AriRid2020__AppleWatch</members>
+        <name>ApexClass</name>
     </types>
     <types>
-        <members>Account.Account_Test_Record_Type</members>
-        <members>Account.Test_Record_Type</members>
-        <name>RecordType</name>
+        <members>Account.Test_Account_Field__c</members>
+        <name>CustomField</name>
+    </types>
+    <types>
+        <members>Standard</members>
+        <name>Profile</name>
     </types>
     <version>48.0</version>
 </Package>
