--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>Lead.PartnerAccountId</members>
-        <name>CustomField</name>
+        <members>Account</members>
+        <name>CustomObject</name>
+    </types>
+    <types>
+        <members>Account.Test_List_View_1</members>
+        <name>ListView</name>
     </types>
     <version>48.0</version>
 </Package>
