--- a/package.xml
+++ b/package.xml
@@ -5,8 +5,12 @@
         <name>CustomObject</name>
     </types>
     <types>
-        <members>Account.Test_List_View_1</members>
-        <name>ListView</name>
+        <members>Account-Account Layout</members>
+        <name>Layout</name>
+    </types>
+    <types>
+        <members>Account.Test_Button</members>
+        <name>WebLink</name>
     </types>
     <version>48.0</version>
 </Package>
