--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>Account.Weekend__c</members>
-        <name>CustomField</name>
+        <members>standard__Sales</members>
+        <name>CustomApplication</name>
+    </types>
+    <types>
+        <members>Test</members>
+        <name>FlexiPage</name>
+    </types>
+    <types>
+        <members>Admin</members>
+        <members>MarketingProfile</members>
+        <members>Testing</members>
+        <name>Profile</name>
+    </types>
+    <types>
+        <members>Account.Account_Test_Record_Type</members>
+        <name>RecordType</name>
     </types>
     <version>48.0</version>
 </Package>
